# pdr

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ChapterList.tsx  MarkingsGrid.tsx  MobileNav.tsx  ProfileScreen.tsx  QuizScreen.tsx  RuleTable.tsx  Sidebar.tsx  SignsGrid.tsx  StatsScreen.tsx  TopBar.tsx
src/data/: markings.ts  pdrRules.generated.ts  quiz.ts  rules.ts  signs.ts
src/data/quizQuestions/: definitions.ts  exam.ts  images.ts  index.ts  maneuvering.ts  markings.ts  overtaking.ts  pedestrians.ts  priority.ts  railway.ts  routeTransport.ts  rules.ts  safeDriving.ts  signs.ts  stopping.ts  tram.ts
src/store/: profileStore.ts  progressStore.ts  quizStore.ts  rulesStore.ts  themeStore.ts
src/types/: index.ts
