[package]
name = "pdr"
version = "0.0.0"
description = "Правила дорожнього руху — Admin"
authors = []
edition = "2021"

[lib]
name = "pdr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pdr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
